2020-07-23 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c:
	  Apply record type 04 32bit extension to all 00.

2020-07-23 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCasm.c,
	  src/z80/gen.c,
	  src/z80/mappings.i:
	  Add new mapping !hashedbankimmeds.

2020-07-23 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCasm.c,
	  src/z80/gen.c,
	  support/regression/tests/banked.c:
	  Fix incorrect syntax of ASXXXX assembler code generated for banked calls.

2020-07-23 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/linksrc/lkout.c,
	  support/makebin/makebin.c:
	  Translate virtual addresses to real addresses in ihx for gbz80.

2020-07-23 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c:
	  Fix bug #3089: sdcc hangs under Windows.

2020-07-22 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sdas/asz80/z80mch.c,
	  support/regression/tests/z80n-push-nn.c:
	  Fix invalid relocation of Z80N PUSH immediate instruction.

2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/linksrc/lkarea.c:
	  Set sane default values for gbz80 banks.

2020-07-22 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/memory.c:
	  Fix test compilation on small systems.

2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/mappings.i:
	  Unify emitted gbz80 asm and fix indentation.

2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c:
	  Improve rule order for gbz80
	* src/z80/peeph-gbz80.def:
	  Remove sp0, which wasn't interrupt safe

2020-07-20 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/memcpy.s,
	  device/lib/z180/memcpy.s,
	  device/lib/z80/memcpy.s,
	  device/lib/z80n/memcpy.s,
	  support/regression/tests/memory.c:
	  Fix invalid return value of memcpy implementation for Z80.

2020-07-21 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c:
	  Fix possible ready beyond a buffer in canJoinRegs constraint.
